--- a/home.css
+++ b/home.css
@@ -175,6 +175,7 @@
      flex-direction: column;
  }
 #wrapper h1{
+    font-size: clamp(2.5rem,6vw,4rem);
     color: white;
     border-bottom: 3px solid #B20710;
     width: 75%;
@@ -212,6 +213,7 @@
  }
 
  .card {
+    background-color: #000000;
      scroll-snap-align: start;
      height: 400px;
      list-style: none;
@@ -228,6 +230,7 @@
  }
 
  .card img{
+    background-color: #000000;
     height: auto;
     width: 100%;
  }
@@ -258,6 +261,7 @@
  }
 
  .card-inner {
+    background-color: #000000;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
@@ -419,6 +423,8 @@
 
  
  #our-team{
+    margin-top: 50px;;
+    z-index:2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -456,6 +462,8 @@
  }
 
  .oc {
+    margin-top: 20px;
+    z-index: 2;
      display: flex;
      gap: 30px;
      overflow-x: scroll;
@@ -469,6 +477,7 @@
  }
 
  .grid {
+    z-index: 2;
      flex: 0 0 auto;
      width: 250px;
      height: 400px;
@@ -562,8 +571,13 @@
     border-bottom: 3px solid #B20710;
     width: 75%;
  }
-
+.sponsers{
+    font-size: clamp(2.5rem,6vw,4rem);
+    margin-bottom : 20px;
+    
+}
  .sponsors-grid {
+    z-index: 2;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px;
@@ -573,6 +587,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 .sponsor-logo {
     width: 270px;
