--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     line-height: 1.5;
     text-decoration: none;
     font-family: "Merriweather";
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);     
     overflow-x: hidden;
 }
 
@@ -39,7 +39,7 @@ a {
     position: relative;
     text-transform: uppercase;
     font-family: Montserrat, helvetica, arial, sans-serif;
-    font-weight: 700
+    font-weight: 700;
 }
 
 .link:before {
@@ -59,7 +59,7 @@ a {
 }
 
 .link:hover:before {
-    width: 100%
+    width: 100%;
 }
 
 .link-theme:before {
@@ -71,7 +71,7 @@ a {
 header {
     position: relative;
     z-index: 2;
-    background-color: #000000;
+    /* background-color: #000000; */
     width: 100%;
     outline: 1px solid #777;
     flex-direction: column;
@@ -82,15 +82,15 @@ header {
     justify-content: space-between;
     align-items: center;
     min-height: 4.5rem;
-    padding: 0.5em;
-    width: 85%;
+    padding: 0.5em 2.5em;
+    width: 100%;
     margin: auto;
 }
 
 .header ul {
     list-style: none;
     overflow: hidden;
-    background-color: #000000;
+    /* background-color: #000000; */
 }
 
 .header li a {
@@ -131,7 +131,7 @@ header {
 .header .menu-icon {
     cursor: pointer;
     display: inline-block;
-    float: right;
+    /* float: right; */
     padding: 28px 20px;
     position: relative;
     user-select: none;
@@ -317,7 +317,7 @@ footer {
     position: relative;
     z-index: 2;
     font-size: 12px;
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -422,5 +422,3 @@ footer {
         text-align: center;
     }
 }
-
-
