--- a/web-vida.css
+++ b/web-vida.css
@@ -6,10 +6,11 @@ html, body {
 
 
 body{
-    background-image: url('breakingbad.jpg');
+    background-image: url('images/breakingbad.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    
 }
 
 .bg-overlay {
@@ -18,8 +19,9 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: rgba(0, 0, 0, 0.6); Adjust opacity */
+    background: rgba(0, 0, 0, 0.5);
     z-index: -1;
+    /* opacity: 40px; */
 }
 
 
